# teleprompter-web

./: CNAME  Pipfile  README.md  app.py  avatar.py  popupanimations.js  pyproject.toml  requirements.txt  speed.py  storageListHelper.py
static/css/: fonts.css  main.css  popupanimations.css
templates/: base.html  download.html  edit.html  exception.html  index-guest.html  index.html  index_guest.html  login.html  profile.html  settings.html  signup.html  test.html
