[tool.poetry]
name = "repl_python3_beta_Teleprompter-Web"
version = "0.1.0"
description = ""
authors = ["siberianbear <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
pyrebase = "^3.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
